fix: add support for OPTIONS request and CORS to allow for successful deposits
